hide example of nice and "rewarding" QAs #67

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -390,55 +390,57 @@
                     -->
 
                     <!-- Q & A TEMPLATE START -->
-                    <div class="row left-align">
-                        <div class="col s12">
-                            <span class="new badge grey lighten-2 black-text" data-badge-caption="votes"
-                                style="float:left; margin-right:4px">0</span>
-                            <span class="new badge green" data-badge-caption="answers"
-                                style="float:left; margin-right:4px">0</span>
-                            <span class="new badge grey lighten-2 black-text" data-badge-caption="views"
-                                style="float:left; margin-right:4px">0</span>
-                            <small style="float:right;">active: 22 days ago</small>
+                    <div ng-show="false">
+                        <div class="row left-align">
+                            <div class="col s12">
+                                <span class="new badge grey lighten-2 black-text" data-badge-caption="votes"
+                                    style="float:left; margin-right:4px">0</span>
+                                <span class="new badge green" data-badge-caption="answers"
+                                    style="float:left; margin-right:4px">0</span>
+                                <span class="new badge grey lighten-2 black-text" data-badge-caption="views"
+                                    style="float:left; margin-right:4px">0</span>
+                                <small style="float:right;">active: 22 days ago</small>
+                            </div>
+                            <div class="col s12">
+                                <h6 style="margin-top:6px; margin-bottom:6px;">Question sakdjaldjaldjdlakdjslakslka
+                                    skldjsdkajdlsjkd askdjaldjals m</h6>
+                            </div>
+                            <div class="col s12">
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag1</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag2</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag3</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag4</span>
+                            </div>
                         </div>
-                        <div class="col s12">
-                            <h6 style="margin-top:6px; margin-bottom:6px;">Question sakdjaldjaldjdlakdjslakslka
-                                skldjsdkajdlsjkd askdjaldjals m</h6>
-                        </div>
-                        <div class="col s12">
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag1</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag2</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag3</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag4</span>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row left-align">
-                        <div class="col s12">
-                            <span class="new badge grey lighten-2 black-text" data-badge-caption="votes"
-                                style="float:left; margin-right:4px">0</span>
-                            <span class="new badge green" data-badge-caption="answers"
-                                style="float:left; margin-right:4px">0</span>
-                            <span class="new badge grey lighten-2 black-text" data-badge-caption="views"
-                                style="float:left; margin-right:4px">0</span>
-                            <small style="float:right;">active: 5 Feb</small>
-                        </div>
-                        <div class="col s12">
-                            <h6 style="margin-top:6px; margin-bottom:6px;">Question sakdjaldjaldjdlakdjslakslka
-                                skldjsdkajdlsjkd askdjaldjals m</h6>
-                        </div>
-                        <div class="col s12">
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag1</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag2</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag3</span>
-                            <span class="new badge blue lighten-1" data-badge-caption=""
-                                style="float:left; margin-right:4px">tag4</span>
+                        <hr>
+                        <div class="row left-align">
+                            <div class="col s12">
+                                <span class="new badge grey lighten-2 black-text" data-badge-caption="votes"
+                                    style="float:left; margin-right:4px">0</span>
+                                <span class="new badge green" data-badge-caption="answers"
+                                    style="float:left; margin-right:4px">0</span>
+                                <span class="new badge grey lighten-2 black-text" data-badge-caption="views"
+                                    style="float:left; margin-right:4px">0</span>
+                                <small style="float:right;">active: 5 Feb</small>
+                            </div>
+                            <div class="col s12">
+                                <h6 style="margin-top:6px; margin-bottom:6px;">Question sakdjaldjaldjdlakdjslakslka
+                                    skldjsdkajdlsjkd askdjaldjals m</h6>
+                            </div>
+                            <div class="col s12">
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag1</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag2</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag3</span>
+                                <span class="new badge blue lighten-1" data-badge-caption=""
+                                    style="float:left; margin-right:4px">tag4</span>
+                            </div>
                         </div>
                     </div>
                     <!-- Q & A TEMPLATE END -->
