change header to include source+version #90

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -4,7 +4,7 @@
 <div class="navbar" id="navbar">
     <nav>
         <div class="nav-wrapper blue-grey lighten-4 ">
-            <a href="#!" class="brand-logo left black-text">OpenBio</a>
+            <span class="brand-logo left black-text">OpenBio.eu (beta) <small>version: {{version}} <a href="https://github.com/kantale/OpenBioC" target="_blank">source</a></small></span>
             <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text"><i class="material-icons">menu</i></a>
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
