Tool/WF discussion is not visible when editing/creating

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -337,7 +337,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ---------------------------------- Discussion ----------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="toolsDataDiscussion">
+                <li id="toolsDataDiscussion" ng-show="!tools_info_editable">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">forum</i>
@@ -678,7 +678,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ---------------------------------- Discussion ----------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="workflowDiscussion">
+                <li id="workflowDiscussion" ng-show="!workflows_info_editable">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">forum</i>
