added some tooltips #91

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -74,7 +74,7 @@
 
 	<script src='/static/app/bower-angular-sanitize-1.7.2/angular-sanitize.min.js'></script>
 
-	<link rel="stylesheet" href="/static/app/ui-select-0.19.8/dist/select.min.css" type="text/css"/>
+	<link rel="stylesheet" href="/static/app/ui-select-0.19.8/dist/select.min.css" type="text/css"/> <!-- https://angular-ui.github.io/ui-select/ -->
   	<script src='/static/app/ui-select-0.19.8/dist/select.min.js'></script>
 
 
