--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -142,7 +142,7 @@
                     <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"
                         ng-show="tools_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="Create Tool" ng-show="!tools_info_editable"
+                        data-position="left" data-tooltip="Add a new Tool or Dataset" ng-show="!tools_info_editable"
                         ng-click="tools_plus_button_clicked(true)"><i class="material-icons plusIcon">add</i></a>
                     <a id="toolsDataUnsavedBtn" class="waves-effect waves-light btn red lighten-2 right unsavedBtn"
                         ng-show="tools_info_editable" ng-click="tools_plus_button_clicked(false)">UNSAVED</a>
