added data.type in scope.tools_var_jstree_model #93

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -220,6 +220,7 @@
                             <!-- adding values to use it for dockerfile-->
                             <div class="col s12 left-align">
                                 <span>Select Operating System</span>
+                                <!-- TODO add multiple -->
                                 <select id="tool_os_choices_select" ng-model="tool_os_choices"
                                     ng-options="os.name group by os.group for os in os_choices"></select>
                             </div>
