bug on OS_types.get_angular_model #92

--- a/OpenBioC/app/templates/app/index_static_en.html
+++ b/OpenBioC/app/templates/app/index_static_en.html
@@ -106,7 +106,7 @@ http://www.tooplate.com/view/2098-health
                                             <h3>An open and integrated collaborative bioinformatics platform.</h3>
                                             <!-- <h2>Healthy Living</h2>-->
 											<br>
-                                            <a href="#about" class="section-btn btn btn-default smoothScroll">About</a>
+                                            <a href="platform/" class="section-btn btn btn-default smoothScroll">Launch Platform</a>
                                         </div>
                                    </div>
                               </div>
